--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
              font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("/img/background.jpeg");
+            background-image: url("./img/background.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -189,7 +189,7 @@
 
 <body>
     <div class="navbar">
-        <img src="/img/logo.png" width="100">
+        <img src="./img/logo.png" width="100">
         <ul>
             <li><a href="#home">Ana Sayfa</a></li>
             <li><a href="#about">Hakkında </a></li>
@@ -202,9 +202,9 @@
         <h1>Hoş Geldiniz</h1>
         <p>Bu site, yapay zekanın yaratıcı gücünü sergileyen bir platformdur. Burada, yapay zeka tarafından oluşturulan etkileyici resimlerin keyfini çıkarabilirsiniz. Sanatın sınırlarını zorlayan bu eserler, doğa, soyutlama, portre ve daha birçok kategoride yer alır. Yapay zekanın benzersiz yeteneklerini keşfetmek ve görsel bir şölen yaşamak için sitemizi gezinmeye başlayın. Unutmayın, geleceğin sanatı şimdi burada!</p>
         <div class="slideshow-container">
-            <img src="/img/cat1.jpeg" alt="Image 1">
-            <img src="/img/cat2.jpeg" alt="Image 2">
-            <img src="/img/cat3.jpeg" alt="Image 3">
+            <img src="./img/cat1.jpeg" alt="resim 1">
+            <img src="./img/cat2.jpeg" alt="resim 2">
+            <img src="./img/cat3.jpeg" alt="resim 3">
         </div>
         <a href="#" class="btn">Tıkla bana!</a>
     </div>
@@ -215,7 +215,7 @@
     </div>
 
     <div id="services" class="container">
-        <h1>Our Services</h1>
+        <h1>Hizmetlerimiz</h1>
         <ol>
            <li>Yapay Zeka Destekli Sanat Galerisi: Yenilikçi yapay zeka algoritmalarıyla üretilen sanat eserlerinin yer aldığı geniş bir koleksiyon.</li>
            <li>Kişiselleştirilmiş İçerik: İhtiyaçlarınıza ve zevklerinize göre özelleştirilebilen yapay zeka tabanlı sanat eserleri.</li>
@@ -243,7 +243,7 @@
     </center>
     <div>
         <footer>
-          <center><p>© 2022 aimastrerpieces0. Tüm hakları saklıdır.</p></center>
+          <center><p>© 2023 Adil Oğuz. Tüm hakları saklıdır.</p></center>
         </footer>
     </div>
 </body>
