--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
     <center>
       <div class="social-icons">
-            <a href="https://m.facebook.com/ProphetCC1"><i class="fab fa-twitter"></i></a>
+            <a href="https://m.facebook.com/ProphetCC1"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/aimasterpieces0"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/noradugann"><i class="fab fa-github"></i></a>
         </div>
